--- a/index.html
+++ b/index.html
@@ -7,9 +7,32 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container">
+            <div class = "navbar">
+                <img src = "assets/images/DJ.png" class = "logo">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Mixtapes</a></li>
+                    <li><a href="#">Bookings</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+            </div>
+            <div class = "content">
+                <div class = "left-col">
+                    <h1>THE<br>DJ<br>SLOUCH<br>DOMAIN</h1>
+                </div>
+                <div class = "right-col">
+                    <p>Listen To Some Tunes</p>
+                    <img src = "assets/images/play.png" id ="icon">
+                </div>
+            </div>
+
+        </div>
         
         
         <script src="" async defer></script>
